2009-12-13  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #12495: ereg_* functions deprecated in PHP 5.3 (Thanks to Dan Osipov)
	* Fixed bug #12856: Stage two of indexing process lists Dry Run (Thanks to Dan Osipov)
	* Fixed bug #13017: tablename field in tx_dam_mm_ref to short (extbase) (Thanks to Thomas Kieslich)

2009-10-11  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #10278: Usage of choices is limited to 100  (Thanks to Bernd Schuhmacher)
	* Fixed bug #11388: MSIE 8.0 Elementbrowser layout broken (Thanks to Georg Kuehnberger)
	* Fixed bug #11387: MSIE 8.0 module file upload tab problem (Thanks to Georg Kuehnberger)
	* Fixed bug #6110: Description Field in cat_edit (Thanks to Tobi)
	* Fixed bug #7654: Category sorting by title, not by "sorting" (Thanks to Michael Ablass)
	* Fixed bug #11854: wrong syntax in ext_tables.sql (Thanks to Guiso Kegel)
	* Fixed bug #11623: Remove deprecated assignments by reference when using "new" statement (Thanks to Andreas Wolf)
	* Fixed bug #11330: docheader in batch_edit mode lacks replacement of FOLDER_INFO, CLOSE and SAVE markers (Thanks to Georg Kuehnberger) 
	
2009-08-20  Michiel Roos <michiel@netcreators.com>

	* #11743: DAM doesn't respekt skin images (Thanks to Georg Ringer)
	* #11750: Title tag of elements in page module is unreadable (Thanks to Georg Ringer)

2009-07-03  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10817: Deleting files does not work for regular backend users

2009-07-21  Michiel Roos <michiel@netcreators.com>

	* #10194: Cannot confirm "delete file" operation
	* #11070: modfunc_list_thumbs: rendering on "no files found" 
	 
2009-07-14  Dan Osipov  <dosipov@phillyburbs.com>

	* #10556: Flexible media types

2009-07-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10817: Upload doesn't work for admins under 4.3

2009-05-20  Michiel Roos <michiel@netcreators.com>

	* #10399: Media > List does not display records with language "All" (Thanks to Francois Suter)
